...

      return (
        <FriendsFeedThumbnailRow
          post={item.post}
          screenWidth={screenWidth}
          testID={`friends-feed-section-${item.username}-row-${item.rowIndex}`}
          testIDPrefix="friends-feed"
          onPostPress={handleOpenPostDetail}
          showRowGap={!item.isLastInGroup}
        />
      );
    },
    [handleOpenPostDetail, handleOpenProfile, screenWidth, theme],
...
